# vcost-prototypes

./: LICENSE  README.md
documentation/: bibliography.rtf
vcost-prototype-0/: README.md  list_cams.py  main.py  requirements.txt
vcost-prototype-1/: Clemens-Moods.m4a  README.md  main.py  requirements.txt
vcost-prototype-2/: Cargo.toml  README.md
vcost-prototype-2/src/: main.rs
